...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ProfileActivity">

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="USERNAME"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <ImageButton
        android:id="@+id/profileSettingsButton"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginBottom="39dp"
        android:contentDescription="pipo"
        android:onClick="settingsButton"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:id="@+id/ProfileScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
...
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/InboxScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Messages"
                    android:textAlignment="center" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerMsg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/friendRequestsTextView"
...
                    tools:itemCount="5"
                    tools:listitem="@layout/friend_request"/>
            </LinearLayout>
        </ScrollView>

        <ScrollView
            android:id="@+id/FriendsScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addFriendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="addFriendButton"
                    android:text="Add Friend" />

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/scanQRButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="useScannerQR"
                        android:text="scan" />

                    <Button
                        android:id="@+id/showQRButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="showQR"
                        android:text="show" />
                </LinearLayout>
...
                    android:layout_weight="1"
                    android:orientation="horizontal">



                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerFriend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="10"

                        />

...
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005">

        <Button
            android:id="@+id/innerProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="PROFILE" />

        <Button
            android:id="@+id/inboxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="INBOX" />

        <Button
            android:id="@+id/friendsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="FRIENDS" />

    </LinearLayout>
...
