...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/replyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="reply"
            app:srcCompat="@android:drawable/ic_menu_revert" />

    </LinearLayout>
...
