...
        <TextView
            android:id="@+id/friendName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="Friend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/messageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/messageButton"
            android:layout_width="wrap_content"
...
