...
        app:layout_constraintVertical_bias="0.489"
        app:srcCompat="@color/purple_200"
        tools:src="@color/purple_200"
        tools:visibility="visible" />

    <Button
        android:id="@+id/signInActivitySignInButton"
        android:layout_width="258dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:text="With Google"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/signInActivityGuestModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="As a Guest"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
...
